添加maven-resources-plugin插件，调整cargo.logging级别为高，删除多个配置类和异常处理类，更新文件上传相关逻辑，优化JWT拦截器，重构前端API调用，修复部分页面样式和功能问题。

--- a/src/main/webapp/student/index.html
+++ b/src/main/webapp/student/index.html
@@ -149,6 +149,10 @@
         </div>
     </footer>
 
+    <script src="../static/js/auth.js"></script>
+    <script src="../static/js/api.js"></script>
+    <script src="../static/js/ui.js"></script>
+    <script src="../static/js/ui-stats.js"></script>
     <script src="script.js"></script>
 </body>
 </html> 
