--- a/src/main/webapp/teacher/index.html
+++ b/src/main/webapp/teacher/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>教师空间 - 智慧校园</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <script src="../static/js/auth.js"></script>
     <script src="../static/js/api.js"></script>
     <script src="../static/js/ui.js"></script>
 </head>
@@ -342,7 +343,7 @@
             
             // 检查用户类型
             const userType = parseInt(localStorage.getItem('userType'));
-            if (userType !== 1 && userType !== 0) { // 教师或管理员可以访问
+            if (userType !== 2 && userType !== 0) { // 教师或管理员可以访问
                 UI.showMessage('您没有访问教师中心的权限', 'error');
                 setTimeout(() => {
                     window.location.href = '/campus/index.html';
