refactor campus: 重构活动模块并添加新功能
- 移除 404 和 500 错误页面
- 修改 Activity 实体，将 content 字段改为 description
- 重构 ActivityController，添加分页和搜索功能
- 新增学生参加活动列表接口
- 更新 ActivityService 接口，增加分页查询和学生活动列表方法
- 实现 ActivityServiceImpl 中的分页查询和学生活动列表
- 更新 API端点，统一使用 /api前缀
- 优化 AppHeader 组件，使用本地存储获取用户角色
- 更新 common.js 中的 API 调用路径- 新增学期列表、时间段列表和星期列表接口

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>智慧校园服务系统</title>
+    <title>后端-智慧化校园服务系统</title>
     <style>
         body {
             font-family: 'Microsoft YaHei', sans-serif;
@@ -61,12 +61,11 @@
 <body>
 <div class="container">
     <h1>智慧校园服务系统</h1>
-    <p>服务状态</p>
-    <div class="status">后端服务已启动</div>
+    <p>后端服务状态</p>
+    <div class="status">服务已启动</div>
 
 
     <div class="footer">
-        智慧校园服务系统
     </div>
 </div>
 </body>
